objects/TILBP__TI_Content__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__ContentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__CourseEndDate__c</fullName>
        <label>Course End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__CourseGroup__c</fullName>
        <label>Course Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__CourseStartDate__c</fullName>
        <label>Course Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__CreatedAt__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__HasChildren__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TILBP__Kind__c</fullName>
        <label>Kind</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>courseGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TILBP__PriceInCents__c</fullName>
        <label>Price In Cents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Sku__c</fullName>
        <label>Sku</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Slug__c</fullName>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__SuggestedRetailPriceInCents__c</fullName>
        <label>Suggested Retail Price In Cents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__UpdatedAt__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>TI Content</label>
    <listViews>
        <fullName>TILBP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TI Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TI Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>